--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container top-space ink-grid">
         <h1 class="bottom-space">Dumbagram</h1>
         <div class="column-group top-space">
-            <div class="all-50">
+            <div class="all-50 small-100">
                 <form class="ink-form">
                     <div class="control-group">
                         <div class="control append-button">
@@ -24,7 +24,7 @@
 
         <div id="results" class="column-group hide-all">
             <h3>Results</h3>
-            <div class="all-50">
+            <div class="all-50 small-100">
                 <table class="ink-table">
                     <thead>
                         <tr>
