UI tweaks. Add result area with current dumbered text.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
             </div>
         </div>
 
-        <div id="results" class="column-group hide-all">
-            <h3>Results</h3>
+        <div class="column-group top-space">
+            <div id="result" class="all-50 small-100">
+                <h1 class="fw-100 align-center"></h1>
+            </div>
+        </div>
+
+        <div id="history" class="column-group top-space hide-all">
+            <h3>History</h3>
             <div class="all-50 small-100">
-                <table class="ink-table">
+                <table class="ink-table hover">
                     <thead>
                         <tr>
                             <th>Original</th>
