Add hack to preload result webfont. Comment out ink.js (not needed for now)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             </div>
         </div>
     </div>
-    <script src="bower_components/Ink/dist/js/ink.min.js"></script>
+    <div class="fw-100">&nbsp;</div>
+    <!-- <script src="bower_components/Ink/dist/js/ink.min.js"></script> -->
     <script src="scripts/main.js"></script>
 </body>
 </html>
