Add hash url support

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="column-group top-space">
             <div class="all-10">&nbsp;</div>
             <div class="all-80">
-                <form class="ink-form">
+                <form class="ink-form" action="#">
                     <div class="control-group all-100">
                         <div class="control append-button">
                             <span><input type="text" placeholder="Insert the name of something with two or more words..."></span>
