Add clear history and other improvements.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     </tbody>
                 </table>
             </div>
+            <div class="align-center">
+                <button class="ink-button orange">Clear History</button>
+            </div>
         </div>
     </div>
     <div class="fw-100">&nbsp;</div>
