Add upload data to firebase

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </div>
     <div class="fw-100">&nbsp;</div>
     <!-- <script src="bower_components/Ink/dist/js/ink.min.js"></script> -->
+    <script src="bower_components/firebase/firebase.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
