--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dumbagram</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" sizes="192x192" href="icon192.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="icon128.png">
+    <link rel="shortcut icon" href="favicon.ico" type="image/ico">
+
     <link rel="stylesheet" href="bower_components/Ink/dist/css/ink.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
