Shorten placeholder message

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form class="ink-form" action="#">
                     <div class="control-group all-100">
                         <div class="control append-button">
-                            <span><input type="text" placeholder="Insert the name of something with two or more words..."></span>
+                            <span><input type="text" placeholder="Insert two or more words..."></span>
                             <button class="ink-button blue">Go!</button>
                         </div>
                     </div>
