Add share url feature

--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
         <div class="column-group top-space">
             <div id="result" class="all-100">
                 <h1 class="fw-100 align-center"></h1>
+                <div class="share-tip-container">
+                    <p class="share-tip">Click to share</p>
+                </div>
             </div>
+        </div>
+
+        <div class="column-group top-space bottom-space">
+            <div id="share" class="all-100 align-center hide-all"><a></a></div>
         </div>
 
         <div id="history" class="column-group top-space hide-all">
