--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Dumbagram</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Dumbagram">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="192x192" href="/images/icon192.png">
